header menu no longer wraps in narrow viewport widths

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -338,7 +338,7 @@
         </div>
         <div
           nz-col
-          nzFlex="1 0 250px"
+          nzFlex="1 0 325px"
           id="header-menu">
           <ul
             nz-menu
@@ -360,9 +360,14 @@
               nz-menu-item
               nzSelected
               nzMatchRouter>
-              <a target="_blank" href="https://docs.civicdb.org/">Documentation</a>
+              <a
+                target="_blank"
+                href="https://docs.civicdb.org/"
+                >Documentation</a
+              >
             </li>
-            <li nz-menu-item
+            <li
+              nz-menu-item
               nzSelected
               nzMatchRouter>
               <a routerLink="/pages/help">Help</a>
