--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -60,11 +60,13 @@
           shape="circle"
           [ngClass]="{ 'update-coi': viewer.invalidCoi }"
           *nzSpaceItem></cvc-user-avatar>
-        <div
-          class="viewer-name"
-          *nzSpaceItem>
-          {{ viewer.username }}
-        </div>
+        <ng-container *ngIf="!cvcCollapsed">
+          <div
+            class="viewer-name"
+            *nzSpaceItem>
+            {{ viewer.username }}
+          </div>
+        </ng-container>
         <i
           nz-icon
           nzType="caret-down"
@@ -123,30 +125,30 @@
   </nz-dropdown-menu>
   <nz-dropdown-menu #addMenu="nzDropdownMenu">
     <ul nz-menu>
-      <li nz-menu-item routerLink="/evidence/add/submit">
-        <a>
-          Evidence Item
-        </a>
+      <li
+        nz-menu-item
+        routerLink="/evidence/add/submit">
+        <a> Evidence Item </a>
       </li>
-      <li nz-menu-item routerLink="/assertions/add/submit">
-        <a>
-          Assertion
-        </a>
+      <li
+        nz-menu-item
+        routerLink="/assertions/add/submit">
+        <a> Assertion </a>
       </li>
-      <li nz-menu-item routerLink="/sources/add">
-        <a>
-          Source Suggestion
-        </a>
+      <li
+        nz-menu-item
+        routerLink="/sources/add">
+        <a> Source Suggestion </a>
       </li>
       <li
         nz-menu-item
         *ngIf="viewer.isEditor">
         <a (click)="this.addVariantModalVisible = true"> Variant </a>
       </li>
-      <li nz-menu-item routerLink="/variant-groups/add/submit">
-        <a>
-          Variant Group
-        </a>
+      <li
+        nz-menu-item
+        routerLink="/variant-groups/add/submit">
+        <a> Variant Group </a>
       </li>
     </ul>
   </nz-dropdown-menu>
@@ -158,9 +160,9 @@
   [nzTitle]="coiModalTitle"
   [nzFooter]="null"
   (nzOnCancel)="this.handleCoiModalCancel()">
-  <ng-template #coiModalTitle
-    ><span>Update your Conflict of Interest Statement</span></ng-template
-  >
+  <ng-template #coiModalTitle>
+    <span>Update your Conflict of Interest Statement</span>
+  </ng-template>
   <ng-template #coiModalContent>
     <cvc-user-coi-form
       (coiUpdatedEvent)="this.coiUpdated()"></cvc-user-coi-form>
