--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -1,5 +1,5 @@
-@import "themes/global-variables.less";
-@import "ng-zorro-antd/style/color/colors.less";
+@import 'themes/global-variables.less';
+@import 'ng-zorro-antd/style/color/colors.less';
 
 :host {
   display: flex;
@@ -98,9 +98,14 @@ nz-sider {
   line-height: @app-header-height;
   padding: @app-header-padding;
   position: fixed;
-  width: calc(~"100% - @{app-sidebar-width}");
+  width: calc(~'100vw - @{app-sidebar-width}');
   z-index: 10;
   color: @geekblue-2;
+  transition: all 0.2s;
+  &.is-collapsed {
+    transition: all 0.2s;
+    width: calc(~'100vw - @{app-sidebar-collapsed-width}');
+  }
 }
 
 .header-trigger {
