show viewer's user tag in dropdown menu if hidden in viewer button

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -80,6 +80,16 @@
     <ul nz-menu>
       <li
         nz-menu-item
+        *ngIf="cvcCollapsed">
+        <cvc-user-tag
+          [user]="viewer"
+          [enablePopover]="false"></cvc-user-tag>
+      </li>
+      <li
+        nz-menu-divider
+        *ngIf="cvcCollapsed"></li>
+      <li
+        nz-menu-item
         *ngIf="viewer.invalidCoi">
         <button
           (click)="this.coiUpdateModalVisible = true"
