--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -286,9 +286,9 @@
             <span>
               <a
                 routerLink="/releases"
-                id="releases"
-                >Data Releases</a
-              >
+                id="releases">
+                Data Releases
+              </a>
             </span>
           </li>
         </ul>
