add button text matches header menu text style

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.less
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.less
@@ -1,5 +1,5 @@
-@import "themes/global-variables.less";
-@import "ng-zorro-antd/style/color/colors.less";
+@import 'themes/global-variables.less';
+@import 'ng-zorro-antd/style/color/colors.less';
 
 :host {
   display: inline-block;
@@ -29,7 +29,7 @@
   margin-right: 0;
   background-color: @layout-header-background;
   border: none;
-  color: #ccc;
+  color: @text-color-secondary-dark;
 }
 
 .notification-btn {
