--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -360,17 +360,20 @@
               nz-menu-item
               nzSelected
               nzMatchRouter>
-              <a
-                target="_blank"
-                href="https://docs.civicdb.org/">
-                Docs
-              </a>
+              <a routerLink="/pages/help">Help</a>
             </li>
             <li
               nz-menu-item
               nzSelected
               nzMatchRouter>
-              <a routerLink="/pages/help">Help</a>
+              <a
+                target="_blank"
+                href="https://docs.civicdb.org/">
+                Docs
+                <i
+                  nz-icon
+                  nzType="link"></i>
+              </a>
             </li>
           </ul>
         </div>
