--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -6,8 +6,8 @@
     <button
       class="add-btn"
       nz-button
-      nzSize="large"
-      nzShape="round"
+      nzSize="small"
+      nzType="link"
       nz-dropdown
       nzTrigger="click"
       [nzDropdownMenu]="addMenu"
