--- a/client/src/app/views/welcome/news-item-list/news-item-list.component.less
+++ b/client/src/app/views/welcome/news-item-list/news-item-list.component.less
@@ -6,15 +6,29 @@
     .ant-card-meta-description {
       color: @text-color;
     }
+    // adjust cover-card title styles to match standard card's styles
+    .ant-card-meta-title {
+      font-size: 12px;
+      line-height: 20px;
+    }
   }
 }
 
+nz-divider {
+  margin: 8px 0 8px 0;
+}
+.cover-card-date {
+  text-align: right;
+  font-weight: normal;
+}
 .news-cover-image {
-  width: 100%;
   max-height: 150px;
   background-position: center center;
   background-repeat: no-repeat;
   overflow: hidden;
+  border-bottom: 1px solid @border-color-split;
+  margin: -12px;
+  margin-bottom: 8px;
   img {
     min-height: 100%;
     min-width: 100%;
