--- a/client/src/app/views/welcome/news-item-list/news-item-list.component.less
+++ b/client/src/app/views/welcome/news-item-list/news-item-list.component.less
@@ -15,23 +15,20 @@
 }
 
 nz-divider {
-  margin: 8px 0 8px 0;
+  margin: 12px 0 8px 0;
 }
 .cover-card-date {
   text-align: right;
   font-weight: normal;
 }
 .news-cover-image {
-  max-height: 150px;
+  max-height: 200px;
+  min-height: 200px;
   background-position: center center;
+  background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
   border-bottom: 1px solid @border-color-split;
   margin: -12px;
   margin-bottom: 8px;
-  img {
-    min-height: 100%;
-    min-width: 100%;
-    opacity: 0;
-  }
 }
