Update how Source citation is constructed and information displayed on detail pages and in popovers

--- a/client/src/app/components/sources/source-popover/source-popover.component.html
+++ b/client/src/app/components/sources/source-popover/source-popover.component.html
@@ -28,7 +28,13 @@
         <nz-descriptions-item
           nzTitle="Title"
           nzSpan="2">
-          {{ s.name }}
+          {{ s.title }}
+        </nz-descriptions-item>
+
+        <nz-descriptions-item
+          nzTitle="Journal"
+          nzSpan="2">
+          {{ s.fullJournalTitle }}
         </nz-descriptions-item>
 
         <nz-descriptions-item
