--- a/client/src/app/forms/variant-submit/variant-submit.form.html
+++ b/client/src/app/forms/variant-submit/variant-submit.form.html
@@ -1,49 +1,30 @@
-<nz-spin
-  nzTip="Submitting"
-  [nzSpinning]="this.loading">
+<ng-container *ngIf="!(newVariant$ | ngrxPush); else variantCreated">
   <form
     nz-form
-    [formGroup]="formGroup"
-    style="width: 400px"
-    (ngSubmit)="submitVariant(formModel)"
-    nzLayout="vertical">
-    <ng-container *ngTemplateOutlet="formMessages"></ng-container>
-
+    [nzLayout]="layout"
+    [formGroup]="form">
     <formly-form
-      [form]="formGroup"
-      [fields]="formFields"
-      [model]="formModel"
-      [options]="formOptions"
-      (modelChange)="onFormModelChange($event)">
+      [form]="form"
+      [fields]="config"
+      [model]="model"
+      [options]="options"
+      (modelChange)="modelChange($event)">
     </formly-form>
   </form>
-</nz-spin>
-
-<ng-template #formMessages>
-  <nz-form-item *ngIf="this.errorMessages.length > 0">
-    <cvc-form-errors-alert [errors]="this.errorMessages">
-    </cvc-form-errors-alert>
-  </nz-form-item>
-  <ng-container *ngIf="this.success">
+</ng-container>
+<ng-template #variantCreated>
+  <ng-container *ngIf="newVariant$ | ngrxPush as variant">
     <nz-alert
       nzType="success"
-      [nzMessage]="this.isNew ? 'Variant Created' : 'Variant Already Exists'"
-      [nzDescription]="successMessage"
-      nzShowIcon></nz-alert>
-    <ng-template
-      #successMessage
-      nzSize="small">
-      <p>
-        View <a routerLink="/variants/{{this.newId}}/summary">its details</a>.
-      </p>
+      nzShowIcon
+      [nzMessage]="successMessage"
+      [nzDescription]="successDescription"></nz-alert>
+    <ng-template #successMessage>
+      New Variant {{ variant.name }} added.
+    </ng-template>
+    <ng-template #successDescription>
+      View its
+      <a [routerLink]="['/variants', variant.id, 'summary']">details here</a>.
     </ng-template>
   </ng-container>
 </ng-template>
-
-<!-- <div nz-row>
-    <div nz-col
-      nzSpan="24">
-      <ngx-json-viewer *ngIf="formModel"
-        [json]="formModel"></ngx-json-viewer>
-    </div>
-  </div> -->
