fixed moderate-entity-buttons filenames

--- a/client/src/app/forms2/types/org-submit-button/org-submit-button.type.html
+++ b/client/src/app/forms2/types/org-submit-button/org-submit-button.type.html
@@ -5,9 +5,15 @@
   [formlyAttributes]="field" />
 
 <button
+  *ngrxLet="mostRecentOrg$ as organization"
+  cvcOrgSubmitButton
   type="submit"
   nz-button
   [disabled]="!form.valid"
-  nzType="primary">
+  [nzDanger]=""
+  nzType="primary"
+  nz-tooltip
+  [nzTooltipTrigger]="organization ? 'hover' : null"
+  [nzTooltipTitle]="'For ' + organization?.name">
   {{ props.submitLabel }}
 </button>
