--- a/client/src/app/components/shared/moderate-entity-buttons/moderate-entity-buttons.component.html
+++ b/client/src/app/components/shared/moderate-entity-buttons/moderate-entity-buttons.component.html
@@ -1,31 +1,24 @@
 <div class="center">
-  <nz-spin [nzSpinning]="this.isSubmitting">
-    <cvc-org-selector-btn-group
-      *ngIf="!this.rejectOnly"
-      [(selectedOrg)]="this.mostRecentOrg">
-      <button
-        cvcOrgSelectorBtn
-        nzType="primary"
-        nzSize="large"
-        nz-button
-        (click)="this.moderate(this.evidenceStatuses.Accepted)">
-        Accept {{ this.entityType }}
-      </button>
-    </cvc-org-selector-btn-group>
+  <nz-spin [nzSpinning]="isSubmitting">
+    <button
+      *ngIf="!rejectOnly"
+      cvcOrgSelectorBtn
+      nzType="primary"
+      nzSize="large"
+      nz-button
+      (click)="moderate(evidenceStatuses.Accepted)">
+      Accept {{ entityType }}
+    </button>
     &nbsp;
-    <cvc-org-selector-btn-group
+    <button
+      cvcOrgSelectorBtn
       nzDanger
       nzType="primary"
-      [(selectedOrg)]="this.mostRecentOrg">
-      <button
-        cvcOrgSelectorBtn
-        nzDanger
-        nzType="primary"
-        nzSize="large"
-        nz-button
-        (click)="this.moderate(this.evidenceStatuses.Rejected)">
-        Reject {{ this.entityType }}
-      </button>
-    </cvc-org-selector-btn-group>
+      nzSize="large"
+      nz-button
+      (click)="moderate(evidenceStatuses.Rejected)">
+      Reject {{ entityType }}
+    </button>
+    <pre>{{ mostRecentOrg?.name }}</pre>
   </nz-spin>
 </div>
