--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.view.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.view.html
@@ -88,8 +88,7 @@
               <cvc-revert-entity-button
                 entityType="Assertion"
                 [entityId]="assertion.id"
-                (onReverted)="onRevertCompleted($event)"
-                *nzSpaceItem>
+                (onReverted)="onRevertCompleted($event)">
               </cvc-revert-entity-button>
             </ng-container>
           </span>
