--- a/client/src/app/forms2/types/textarea/textarea.type.html
+++ b/client/src/app/forms2/types/textarea/textarea.type.html
@@ -1,4 +1,6 @@
- <textarea
-   nz-input
-   [formControl]="formControl"
-   [formlyAttributes]="field"></textarea>
+<textarea
+  nz-input
+  [formControl]="formControl"
+  [formlyAttributes]="field"
+  [nzAutosize]="to.autosize"
+  [placeholder]="to.placeholder"></textarea>
