flag-resolve submit button shows selected org in tooltip

--- a/client/src/app/forms2/components/flag-resolve/flag-resolve.form.html
+++ b/client/src/app/forms2/components/flag-resolve/flag-resolve.form.html
@@ -92,7 +92,10 @@
                 cvcOrgSelectorBtn
                 nzType="primary"
                 nzSize="small"
-                [disabled]="!(this.comment !== undefined && this.comment.length >= 10)">
+                [disabled]="!(this.comment !== undefined && this.comment.length >= 10)"
+                nz-tooltip
+                [nzTooltipTrigger]="selectedOrg ? 'hover' : null"
+                [nzTooltipTitle]="'For ' + selectedOrg?.name">
                 Resolve
               </button>
             </cvc-form-buttons>
