flag-add submit button shows selected org in tooltip

--- a/client/src/app/forms2/components/flag-add/flag-add.form.html
+++ b/client/src/app/forms2/components/flag-add/flag-add.form.html
@@ -47,7 +47,10 @@
                   cvcOrgSelectorBtn
                   nzType="primary"
                   nzSize="small"
-                  [disabled]="!(this.comment !== undefined && this.comment.length >= 10) || !viewer.signedIn">
+                  [disabled]="!(this.comment !== undefined && this.comment.length >= 10) || !viewer.signedIn"
+                  nz-tooltip
+                  [nzTooltipTrigger]="selectedOrg ? 'hover' : null"
+                  [nzTooltipTitle]="'For ' + selectedOrg?.name">
                   Flag {{ this.flaggable.entityType | enumToTitle }}
                 </button>
               </ng-template>
