nicer looking selected state for viewer-button menu organizations

--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -147,7 +147,7 @@
               <li
                 *ngFor="let org of viewer.organizations"
                 (click)="menuSelection$.next(org.id)"
-                [ngClass]="{ selected: viewer.mostRecentOrg?.id === org.id }"
+                [nzSelected]="viewer.mostRecentOrg?.id === org.id"
                 nz-menu-item>
                 <nz-avatar
                   [nzSrc]="org?.profileImagePath"
