--- a/client/src/app/forms/config/variantgroup-revise/variantgroup-revise.form.html
+++ b/client/src/app/forms/config/variantgroup-revise/variantgroup-revise.form.html
@@ -1,10 +1,11 @@
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
-  entityType="Evidence Item"
+  entityType="Variant Group"
   [redirectUrl]="this.url"
   [successMessage]="success">
   <ng-template #success>
-    Revision(s) submitted! You will be redirected to the Revisions page or you may view them
+    Revision(s) submitted! You will be redirected to the Revisions page or you
+    may view them
     <a href="{{this.url}}">here.</a>
   </ng-template>
   <form
