--- a/client/src/app/components/shared/table-counts/table-counts.component.html
+++ b/client/src/app/components/shared/table-counts/table-counts.component.html
@@ -4,4 +4,7 @@
   nz-typography
   nzType="secondary">
   {{ tci.edgeCount | number }} of {{ tci.filteredCount | number }} displayed
+  <span *ngIf="tci.lastUpdated">
+    (Current as of {{ tci.lastUpdated | timeAgo }})
+  </span>
 </span>
