improved form-field styles, using host-context() instaed of ::ng-deep

--- a/client/src/app/forms/wrappers/form-field/form-field.wrapper.html
+++ b/client/src/app/forms/wrappers/form-field/form-field.wrapper.html
@@ -1,3 +1,4 @@
+<!-- <pre>Error State: {{ errorState | json }}</pre> -->
 <ng-container [ngSwitch]="formLayout">
   <div
     *ngSwitchCase="'horizontal'"
